# topobench

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
evals/prompts/: bridges.txt  bridges_intformat.txt  bridges_intformat_json.txt  flow_free.txt  flow_free_intformat.txt  flow_free_intformat_json.txt  galaxies.txt  galaxies_intformat.txt  galaxies_intformat_json.txt  loopy.txt  loopy_intformat.txt  loopy_intformat_json.txt  pattern.txt  pattern_intformat.txt  pattern_intformat_json.txt  undead.txt  undead_intformat.txt  undead_intformat_json.txt
evals/src/: clients.py  evals.py  evals_verifier.py  main.py  puzzles.py
mappings/topobench_mappings/: bridges.json  flow_free.json  galaxies.json  loopy.json  pattern.json  undead.json
scripts/: install.sh
submodules/: BUILD_RLP.md
submodules/flowfree/: convert_freeflow.py  create_df.py  flowfree_CoT.c  flowfree_all_solutions.c  flowfree_problems_solutions1.csv  generate_puzzles.py  solve_generated.py  verifier.py
submodules/flowfree/tests/: test_valid_5x5.txt  test_valid_5x5_alt.txt  test_valid_8x8.txt
submodules/rlp/: ASCII_PARSER_IMPLEMENTATION_GUIDE_new.md  ASCII_PARSER_IMPLEMENTATION_TEMPLATE.md  ASCII_PARSING_IMPLEMENTATION_GUIDE_ascii_parsing_in_c.md  GALAXIES_LOAD_STATE_DICT_PLAN.md  LOAD_STATE_DICT_IMPLEMENTATION_GUIDE.md  PATTERN_LOAD_STATE_DICT_IMPLEMENTATION_PLAN.md  README.md  RECOMPILE_NOTE.md  VERIFIER_README.md  setup.py  verifier.py
submodules/rlp/puzzles/: bridges.c  galaxies.c  loopy.c  pattern.c  puzzles.but  puzzles.txt  undead.c
submodules/rlp/rlp/: __init__.py  ascii_parser.py  (+3 more)
